<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Master Service</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="show_files">Show files</string>
    <string name="save_state">Save state</string>
    <string name="load_state">Load state</string>
    <string name="clear_persistent_state">Clear persistent state</string>

</resources>
